--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ a {
 
 #presentation-home {
   width: 100%;
-  height: 82vh;
+  height: 80vh;
   justify-content: center;
   align-items: center;
   overflow: hidden;
@@ -321,7 +321,6 @@ a {
 
 .cocineroX {
   flex-direction: column;
-  align-items: center;
   height: auto;
   width: 350px;
   overflow: hidden;
@@ -341,6 +340,7 @@ a {
 
 .cocineroX a {
   width: max-content;
+  align-self: center;
 }
 
 .cocineroX a p {
